[tool.poetry]
name = "sklex"
version = "0.1.0"
description = "A Python package that extends Scikit-learn with new models."
authors = ["Miguel Palencia-Olivar <miguel.palencia-olivar@cognitive-works.com>"]
license = "BSD 3-Clause License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.4.1.post1"
cython = "^3.0.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
tox = "^4.13.0"
black = "^24.2.0"
mypy = "^1.8.0"
sphinx = "^7.2.6"
pytest-mypy = "^0.10.3"
pytest-black-ng = "^0.4.1"
pytest-cov = "^4.1.0"
ruff = "^0.2.2"
pytest-ruff = "^0.2.1"

[build-system]
requires = ["poetry-core", "cython"]
build-backend = "poetry.core.masonry.api"
